# nominate_cmodule

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: csv_loader.hpp  cutting_plane.hpp  cutting_point.hpp  dwnominate.hpp  grid_optimizer.hpp  legislator_derivatives.hpp  likelihood.hpp  normal_cdf.hpp  optimize_legislators.hpp  rollcall_derivatives.hpp  rollcall_optimizer.hpp  simple_ols.hpp  sort_utils.hpp
nlopt/lib/cmake/nlopt/: NLoptConfig.cmake  NLoptLibraryDepends.cmake
nlopt/lib/pkgconfig/: nlopt.pc
src/: csv_loader.cpp  cutting_plane.cpp  cutting_point.cpp  dwnominate.cpp  grid_optimizer.cpp  legislator_derivatives.cpp  likelihood.cpp  main.cpp  main_cli.cpp  nominate.cpp  normal_cdf.cpp  optimize_legislators.cpp  rollcall_derivatives.cpp  rollcall_optimizer.cpp  simple_ols.cpp  test_json.cpp  test_nominate.cpp
